...
    <string name="webview_error_message">The page could not be loaded (HTTP %1$d)</string>
    <string name="webview_offline">Offline</string>
    <string name="create_bookmark_error">Error creating bookmark: %1$s</string>
    <string name="add_new_bookmark">Add New Bookmark</string>
    <string name="create">Create</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="not_valid_url">Not a valid URL</string>
    <string name="log_view_title">Logs</string>
    <string name="log_view_send_logs">Send Logs</string>
    <string name="settings_logs">Logs</string>
    <string name="settings_logs_subtitle">View &amp; Send</string>
    <string name="log_view_share_title">Send Logs</string>
...
    <string name="delete">Delete</string>
    <string name="delete_label_confirm_message">Are you sure you want to delete the label \"%1$s\"? It will be removed from %2$d bookmarks.</string>
    <string name="delete_selected_bookmarks_confirm_message">Delete %1$d selected bookmarks?</string>

    <!-- Search -->
    <string name="search_bookmarks">Search bookmarks</string>
    <string name="search">Search</string>
    <string name="close_search">Close search</string>
    <string name="clear_search">Clear search</string>
    <string name="search_no_results">No results found</string>
    <string name="search_in_article_hint">Find in article</string>
    <string name="search_match_counter">%1$d/%2$d</string>
    <string name="search_next_match">Next match</string>
...
    <string name="filter_title">Title</string>
    <string name="filter_author">Author</string>
    <string name="filter_site">Site</string>
    <string name="filter_label">Label</string>
    <string name="filter_from_date">From date</string>
    <string name="filter_to_date">To date</string>
    <string name="filter_length">Length</string>
    <string name="filter_length_dialog_title">Length filters</string>
    <string name="filter_length_summary_none">Any reading time / any word count</string>
    <string name="filter_length_include_unknown">Include unknown</string>
    <string name="filter_length_unknown">unknown</string>
    <string name="filter_length_clear">Clear</string>
    <string name="filter_reading_time_est">Reading Time Est.</string>
    <string name="filter_reading_time_min">Min</string>
    <string name="filter_reading_time_max">Max</string>
    <string name="filter_reading_time_null">Null</string>
    <string name="filter_reading_time_error">Min must be less than or equal to max</string>
    <string name="filter_reading_time">Read time</string>
    <string name="filter_word_count_est">Word Count</string>
    <string name="filter_word_count">Words</string>
    <string name="filter_is_loaded">Is downloaded</string>
    <string name="filter_unavailable">Unavailable</string>
    <string name="filter_unavailable_in_collection_tooltip">This filter is specific to this device and can\'t be saved in a collection. It still works on the bookmark list.</string>
...
